[gd_scene load_steps=11 format=3 uid="uid://dvte0cq377kvg"]

[ext_resource type="Script" path="res://script/object/interactive/common/bucket.gd" id="1_e7ywb"]
[ext_resource type="ArrayMesh" uid="uid://pyekwcve55qw" path="res://asset/3d/object/bucket.obj" id="2_5wl3t"]
[ext_resource type="Shader" path="res://shader/spatial/psx_lit.gdshader" id="3_c74fj"]
[ext_resource type="AudioStream" uid="uid://cw2npidddcrth" path="res://sfx/object/bucket.wav" id="4_cki80"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u135j"]
render_priority = 0
shader = ExtResource("3_c74fj")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/tile_mode = false
shader_parameter/tile = Vector2i(0, 0)
shader_parameter/per_quad_depth = false
shader_parameter/adjustable_depth = false
shader_parameter/depth_offset = null

[sub_resource type="BoxShape3D" id="BoxShape3D_0j83s"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_rdpev"]
size = Vector3(0.5, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_4p4uv"]
size = Vector3(2, 1, 0.45)

[sub_resource type="BoxShape3D" id="BoxShape3D_3x7dp"]
margin = 0.0
size = Vector3(0.74, 1, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_l8gjm"]
points = PackedVector3Array(-0.361514, -0.3913, -0.149776, -0.361514, -0.3913, 0.1, -0.361514, 0.3913, -0.149776, -0.149758, -0.3913, -0.361514, 0.361443, -0.3913, 0.1, -0.361514, 0.3913, 0.1, -0.149758, 0.3913, -0.361514, 0.149687, -0.3913, -0.361514, 0.361443, -0.3913, -0.149776, 0.361443, 0.3913, 0.1, 0.149687, 0.3913, -0.361514, 0.361443, 0.3913, -0.149776)

[node name="Bucket" type="CharacterBody3D"]
process_mode = 1
disable_mode = 1
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
floor_stop_on_slope = false
script = ExtResource("1_e7ywb")

[node name="BucketMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_5wl3t")
surface_material_override/0 = SubResource("ShaderMaterial_u135j")

[node name="BucketArea" type="Area3D" parent="."]

[node name="BucketAreaCollision" type="CollisionShape3D" parent="BucketArea"]
shape = SubResource("BoxShape3D_0j83s")

[node name="FrontArea" type="Area3D" parent="."]

[node name="BucketFrontCollision" type="CollisionShape3D" parent="FrontArea"]
shape = SubResource("BoxShape3D_rdpev")

[node name="SideArea" type="Area3D" parent="."]

[node name="BucketSideCollision" type="CollisionShape3D" parent="SideArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.125)
shape = SubResource("BoxShape3D_4p4uv")

[node name="BucketSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_cki80")
unit_size = 20.0
bus = &"SFX"

[node name="BucketWallCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.75)
shape = SubResource("BoxShape3D_3x7dp")
disabled = true

[node name="BucketCollision" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_l8gjm")

[connection signal="body_entered" from="BucketArea" to="." method="_on_bucket_area_body_entered"]
[connection signal="body_entered" from="FrontArea" to="." method="_on_front_area_entered"]
[connection signal="body_exited" from="FrontArea" to="." method="_on_front_area_exited"]
[connection signal="body_entered" from="SideArea" to="." method="_on_side_area_entered"]
[connection signal="body_exited" from="SideArea" to="." method="_on_side_area_exited"]
